added run tab with new window that asks user to input model and property and output window